--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-router-dom": "4.3.1",
     "react-scripts": "^3.0.1",
     "react-slick": "0.23.2",
-    "react-swipeable-views": "0.13.1"
+    "react-swipeable-views": "0.13.1",
+    "styled-components": "^4.3.1"
   },
   "devDependencies": {
     "@babel/cli": "7.2.3",
