--- a/package.json
+++ b/package.json
@@ -7,13 +7,18 @@
   "dependencies": {
     "@material-ui/core": "3.9.2",
     "@material-ui/icons": "3.0.2",
+    "bootstrap": "^4.3.1",
+    "bootstrap-daterangepicker": "^3.0.5",
     "classnames": "2.2.6",
+    "dayjs": "^1.8.14",
     "history": "4.7.2",
     "moment": "2.24.0",
     "node-sass": "4.11.0",
     "nouislider": "13.1.0",
-    "prop-types": "15.7.1",
-    "react": "16.8.1",
+    "prop-types": "^15.7.2",
+    "rb-datepicker": "^0.0.5",
+    "react": "^16.8.6",
+    "react-dates": "^20.2.3",
     "react-datetime": "2.16.3",
     "react-dom": "16.8.1",
     "react-router-dom": "4.3.1",
