--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@material-ui/core": "3.9.2",
     "@material-ui/icons": "3.0.2",
+    "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "bootstrap-daterangepicker": "^3.0.5",
     "classnames": "2.2.6",
@@ -20,12 +21,14 @@
     "react": "^16.8.6",
     "react-dates": "^20.2.3",
     "react-datetime": "2.16.3",
-    "react-dom": "16.8.1",
+    "react-dom": "^16.8.1",
+    "react-mail-form": "^1.0.3",
     "react-router-dom": "4.3.1",
     "react-scripts": "^3.0.1",
     "react-slick": "0.23.2",
     "react-swipeable-views": "0.13.1",
-    "styled-components": "^4.3.1"
+    "styled-components": "^4.3.1",
+    "web-form": "0.0.1"
   },
   "devDependencies": {
     "@babel/cli": "7.2.3",
